src/objects/SomDig_InvoiceMonth__c.object
<CustomObject>
    <fields>
        <fullName>SomDig_ClosureDateTime__c</fullName>
        <description>Zeigt  Datum und Zeit an, zu welchem der aktuelle Monat geschlossen wurde.</description>
        <inlineHelpText>Zeigt  Datum und Zeit an, zu welchem der aktuelle Monat geschlossen wurde.</inlineHelpText>
        <label>Monat geschlossen am</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SomDig_IsCurrentMonth__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Zeigt an ob der Rechnugsmonat aktiv ist.</inlineHelpText>
        <label>Aktiver Monat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Month__c</fullName>
        <label>Monat</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_To__c</fullName>
        <description>Rechnungsdatum bis zu dem inklusive der Monat zugeordnet werden soll</description>
        <inlineHelpText>Rechnungsdatum bis zu dem inklusive der Monat zugeordnet werden soll</inlineHelpText>
        <label>Rechnungsdatum bis</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomDig_Year__c</fullName>
        <label>Jahr</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Rechnungsmonat</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SomDig_Year__c</columns>
        <columns>SomDig_Month__c</columns>
        <columns>SomDig_IsCurrentMonth__c</columns>
        <columns>SomDig_ClosureDateTime__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SomDig_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>J2016</fullName>
        <columns>NAME</columns>
        <columns>SomDig_Year__c</columns>
        <columns>SomDig_Month__c</columns>
        <columns>SomDig_IsCurrentMonth__c</columns>
        <columns>SomDig_ClosureDateTime__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SomDig_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SomDig_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>2016</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>J2017</fullName>
        <columns>NAME</columns>
        <columns>SomDig_Year__c</columns>
        <columns>SomDig_Month__c</columns>
        <columns>SomDig_IsCurrentMonth__c</columns>
        <columns>SomDig_ClosureDateTime__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SomDig_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SomDig_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <label>2017</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>J2018</fullName>
        <columns>NAME</columns>
        <columns>SomDig_Year__c</columns>
        <columns>SomDig_Month__c</columns>
        <columns>SomDig_IsCurrentMonth__c</columns>
        <columns>SomDig_ClosureDateTime__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SomDig_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SomDig_Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <label>2018</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>IM-{0000}</displayFormat>
        <label>Rechnungsmonats-Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rechnungsmonate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>